# onnxruntime-libs

./: README.md  build-static_lib.sh
.github/workflows/: aarch64-shared-217.yaml  aarch64-shared-228.yaml  android-shared.yaml  arm-linux-gnueabihf-8.yaml  arm-linux-gnueabihf.yaml  harmony-os-shared.yaml  ios.yaml  linux-rocm-shared.yaml  linux-shared-217.yaml  linux-shared-228.yaml  linux-static.yaml  macos-shared.yaml  macos-static.yaml  patch.yaml  vision-os-shared.yaml  windows-arm64.yaml  windows-x64.yaml  windows-x86.yaml
static_lib/: CMakeLists.txt  bundle_static_library.cmake
